refacotr: 코드 수정
