# swagger/mypage.swagger.yaml
@@ -1,9 +1,101 @@
 paths:
   /mypage:
+    get:
+      tags:
+        - Mypage
+      summary: 나의 우주선
+      parameters:
+        - in: query
+          name: type
+          description: type 선택하기(내 글은 1, 질문집은 2)
+          required: true
+          schema:
+            type: integer
+            enum:
+              - 1
+              - 2
+        - name: 
+          in: body
+          required: true
+          schema:
+            properties:
+              user_id: 
+                type: bigint(10)
+                description: 유저 식별자
+                example: 1
+      responses:
+        '200':
+          description: 조회 성공!
+          schema:
+            type: object
+            properties:
+              status:
+                type: integer
+                example: 200
+              isSuccess:
+                type: boolean
+                example: true
+              code:
+                type: integer
+                example: 2000
+              message:
+                type: string
+                example: "success!"
+              data:
+                type: object
+                example: {
+                  "post_id":3,
+                  "title":"붕어빵",
+                  "content":"겨울은 붕어빵의 계절이다",
+                  "created_at":"2024-02-06T07:56:02.000Z",
+                  "self_destructTime":null,
+                  "visibility":"전체공개","topic_id":0,
+                  "referencetopic_id":null,
+                  "user_id":1
+                }
+
+        '400':
+          description: 잘못된 요청
+          schema:
+            type: object
+            properties:
+              status:
+                type: integer
+                example: 400
+              isSuccess:
+                type: boolean
+                example: false
+              code:
+                type: integer
+                example: COMMON001
+              message:
+                type: string
+                example: 잘못된 요청입니다
+
+        '500':
+          description: 서버 에러
+          schema:
+            type: object
+            properties:
+              status:
+                type: integer
+                example: 500
+              isSuccess:
+                type: boolean
+                example: false
+              code:
+                type: integer
+                example: COMMON000
+              message:
+                type: string
+                example: 서버 에러, 관리자에게 문의 바랍니다.
+
+  
+  /mypage/follow:
     post:
       tags:
         - Mypage
-      summary: 마이페이지
+      summary: 나의 이웃
       parameters:
         - name: mypage
           in: body
@@ -21,7 +113,7 @@ paths:
               
       responses:
         '200':
-          description: 회원 가입 성공!
+          description: 이웃 조회 성공 !
           schema:
             type: object
             properties:
